#107 feat : GC 로깅 추가 (#121)